# pennywise

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.sample  .env.test  .eslintignore  .eslintrc.js  .gitignore  .nvmrc  .oxfmtrc.json  .oxlintrc.json  .prettierrc  .rustfmt.toml  .sql-formatter.json  .taplo.toml  .tombi.toml  CNAME  Cargo.toml  Dockerfile  README.md  app.json  astro.config.ts  biome.jsonc  build.sh  compose.override.yaml  compose.production.yaml  compose.yaml  ec.config.ts  eslint.config.js  index.html  lefthook.yml  netlify.toml  next.config.ts  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prisma.config.ts  react-router.config.ts  (+11 more)
.astro/: icon.d.ts
.config/: bacon.toml  dotenv.ts  experiments.ts  fonts.ts  iconify.json  images.ts  integrations.ts  markdown.ts  options.ts  plugins.ts
.github/: copilot-instructions.md  pull_request_template.md
.zed/: settings.json
actions/: auth.ts  sidebar.ts
app/: app.css  cookies.server.ts  entry.client.tsx  entry.server.tsx  env-override.d.ts  env.d.ts  global.css  layout.tsx  page.tsx  root.tsx  routes.ts  sessions.server.ts  vite-env-override.d.ts
apps/api/: .env.test  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yml  http.ps1  package.json
apps/api/.cargo/: config.toml
apps/api/.config/: bacon.toml
apps/api/.sqlx/: query-10e1e41ff491117440562b12bdd6e81f53e93feacd3b5de4be6e877f3e3b3784.json  query-24048a8c2a522b9cedb08b812f90d15e72b33987e4ea36e04f8104538059ab22.json  query-329c92f696b2626d3c4edfed53e8fd4a66e3f6bb0b70f10f4cddb5355b261252.json  query-47a83114446bf8dcb9ec5dc7ffc0d00cc8c868ba150f2fc7e94ec8897bc3dd7a.json  query-77210c2c55d153a060412b7726c1c48eada73e09c6554ae163f79b270e0d529a.json  query-8ed2b944e24e8d0f1d1b60e97ca9fc0615d3e6dd1cd413ee87cf72460bafc032.json  query-a801c11e467e5ecc7406b25b1a7749d6dd0f61fbe93da8d18bd1a491a6476608.json  query-b1e0c4c02401510f725fc7240629cc1bf575dfb8fea165a48bc3b582436b6fdb.json  query-c42acb436caa032e123819038f9ca5b871996b561deeee514e4972c5cbd11a68.json  query-db9225314585b9a6420cf421a63962547abf27ad0618074de255180a432e492a.json  query-e249a42ffd5fd53b92b1a1dfc7711d44fac9f6c7af0e28cb2b8e497c6094ab26.json  query-f0b34801a4f6976d7016ae5c838bd70dc577f29586715cfdb74a26274baa5c72.json
apps/api/cli/: Cargo.toml  README.md
apps/api/cli/src/: lib.rs
apps/api/cli/src/util/: ui.rs
apps/api/config/: Cargo.toml  Config.toml  README.md  default.toml  local.toml  production.toml
apps/api/config/environments/: development.toml  production.toml
apps/api/config/src/: lib.rs
apps/api/db/: Cargo.toml  README.md  seeds.sql
apps/api/db/migrations/: 1674214687_create_users_table.sql  1773605599__init.sql  1773626997__setup_security_ctx.sql  1773632064__users.sql
apps/api/db/src/: lib.rs
apps/api/db/src/entities/: mod.rs  tasks.rs  users.rs
apps/api/db/src/test_helpers/: mod.rs  users.rs
apps/api/macros/: Cargo.toml  README.md
apps/api/macros/src/: lib.rs
apps/api/migrations/: 001_table_users.sql  20260301184418_init.down.sql  20260301184418_init.up.sql  20260301184748_triggers.down.sql  20260301184748_triggers.sql  20260301184748_triggers.up.sql  20260301184936_categories.down.sql  20260301184936_categories.sql  20260301184936_categories.up.sql  20260301185234_avatars.sql  20260301185234_merchants.down.sql  20260301185234_merchants.up.sql  20260301185349_users.down.sql  20260301185349_users.up.sql  20260301185511_transactions.down.sql  20260301185511_transactions.up.sql  20260301190442_budgets.down.sql  20260301190442_budgets.up.sql  20260301190800_pots.down.sql  20260301190800_pots.up.sql  20260301191512_recurring_bills.down.sql  20260301191512_recurring_bills.up.sql  20260301192106_views.down.sql  20260301192106_views.up.sql  20260311040030_rls.down.sql  20260311040030_rls.up.sql  20260311040152_index.down.sql  20260311040152_index.up.sql
apps/api/sample/: data.sql  json.sql
apps/api/scripts/: docker.sh
apps/api/src/: config.rs  lib.rs  main.rs  start.rs  telemetry.rs
apps/api/src/app/: middleware.rs  mod.rs
apps/api/src/application/: mod.rs
apps/api/src/application/repos/: budget.rs  mod.rs  pot.rs  transaction.rs  user.rs
apps/api/src/application/services/: bill.rs  budget.rs  mod.rs  pot.rs  transaction.rs  user.rs
apps/api/src/bootstrap/: database.rs  mod.rs  o11ty.rs  redis.rs  router.rs  server.rs  services.rs  state.rs  telemetry.rs
apps/api/src/config/: mod.rs
apps/api/src/domain/: errors.rs  mod.rs
apps/api/src/domain/entities/: session.rs
apps/api/src/http/: errors.rs  handlers.rs  mod.rs  router.rs
apps/api/src/http/handlers/: health.rs
apps/api/src/http/middleware/: session.rs
apps/api/src/http/routes/: mod.rs  user.rs
apps/api/src/infra/: mod.rs
apps/api/src/infra/models/: bill.rs  budget.rs  mod.rs  pot.rs  transaction.rs  user.rs
apps/api/src/infra/repos/: bill.rs  mod.rs
apps/api/src/shared/: errors.rs
apps/api/src/shared/types/: id.rs
apps/api/web/: Cargo.toml  README.md
apps/api/web/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
apps/api/web/src/controllers/: health.rs  mod.rs  tasks.rs
apps/api/web/src/middlewares/: auth.rs  mod.rs
apps/api/web/src/test_helpers/: mod.rs
apps/api/web/tests/api/: health.rs  main.rs  tasks.rs
components/: dialog.tsx  navlink.tsx
context/: REVISED_ARCHITECTURE.md  WHAT_CHANGED.md  revised_models.rs
crates/auth/: Cargo.toml
crates/database/: Cargo.toml
crates/database/src/: lib.rs  postgres.rs  pqsl.rs
crates/database/src/postgres/: account.rs  bill.rs  budget.rs  category.rs  goal.rs  pot.rs  recurring.rs  transaction.rs  user.rs
crates/engine/: Cargo.toml
crates/engine/src/: errors.rs  lib.rs  models.rs  repos.rs
crates/engine/src/models/: account.rs  bills.rs  budget.rs  category.rs  goal.rs  pots.rs  recurring.rs  transaction.rs  user.rs
crates/engine/src/repos/: account.rs  budget.rs  category.rs  goal.rs  recurring.rs  transaction.rs  user.rs
crates/marker/: Cargo.toml
docker-entrypoint-initdb.d/: init.sql  init.test.sql  init_grants.sh
prisma/: schema.prisma  (+1 more)
(+373 files in other folders)
