#:schema https://www.schemastore.org/cargo.json
[workspace]
members  = ["apps/api"]
resolver = "3"

[workspace.lints.rust]
elided-lifetimes-in-paths = "warn"

[workspace.lints.clippy]
many_single_char_names = "allow"
unwrap_or_default      = "allow"

[workspace.package]
authors    = ["Prince Muel <68931805+princemuel@users.noreply.github.com>"]
edition    = "2024"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/princemuel/aoctl"

[workspace.dependencies]
serde      = "1"
serde_json = "1"
