#:schema https://www.schemastore.org/cargo.json
[package]
authors    = ["Prince Muel <68931805+princemuel@users.noreply.github.com>"]
edition    = "2024"
license    = "MIT OR Apache-2.0"
name       = "api"
repository = "https://github.com/princemuel/pennywise"
version    = "0.1.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
  "net",
  "macros",
  "rt-multi-thread",
  "signal",
] }

# Web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "fs",
  "trace",
  "cors",
  "request-id",
  "timeout",
  "compression-full",
] }
tower-sessions = "0.15"
tower-sessions-redis-store = "0.16"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "migrate",
  "rust_decimal",
  "chrono",
] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Auth
argon2        = "0.5"
jsonwebtoken  = "10"
oauth2        = "5"
openidconnect = "4"

# Config
config  = { version = "0.15", default-features = false, features = ["toml"] }
dotenvy = "0.15"
secrecy = { version = "0.10", features = ["serde"] }

# Utils
anyhow       = "1"
async-trait  = "0.1"
chrono       = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str", "macros"] }
thiserror    = "2"
uuid         = { version = "1", features = ["serde", "v7"] }

# Observability
serde_json               = "1.0.149"
tracing                  = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-log              = "0.2"
tracing-subscriber       = { version = "0.3", features = ["registry", "env-filter"] }

[dev-dependencies]
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
tokio                  = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true
