[workspace]
default-members = ["web"]
members         = ["cli", "config", "db", "web", "macros"]
resolver        = "3"

[workspace.lints.rust]
elided-lifetimes-in-paths = "warn"

[workspace.lints.clippy]
many_single_char_names = "allow"
unwrap_or_default      = "allow"

[workspace.package]
authors    = ["Prince Muel <68931805+princemuel@users.noreply.github.com>"]
edition    = "2024"
license    = "MIT OR Apache-2.0"
publish    = false
repository = "https://github.com/princemuel/pennywise"

[workspace.dependencies]
anyhow = "1"
fake = { version = "4" }
figment = { version = "0.10" }
googletest = { version = "0.14" }
hyper = { version = "1", features = ["full"] }
regex = { version = "1" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "migrate",
  "rust_decimal",
  "chrono",
] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tracing = "0.1"
uuid = { version = "1", features = ["serde"] }

######################################
api-cli    = { path = "./cli" }
api-config = { path = "./config" }
api-db     = { path = "./db" }
api-macros = { path = "./macros" }
api-web    = { path = "./web" }

[profile.dev]
debug     = true
opt-level = 1

[profile.release]
codegen-units = 1
lto           = "thin"
opt-level     = "s"
panic         = "abort"
strip         = true

[profile.bench]
codegen-units = 1
debug         = false
lto           = true
opt-level     = 3
