#:schema https://www.schemastore.org/cargo.json
[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "pennapi-db"
repository.workspace = true
version              = "0.0.0"


[dependencies]
anyhow       = { workspace = true }
async-trait  = { workspace = true }
chrono       = { workspace = true }
pennapi-core = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
sqlx         = { workspace = true }
thiserror    = { workspace = true }
tokio        = { workspace = true }
uuid         = { workspace = true }

[features]
default  = ["postgres"]
postgres = ["sqlx/postgres"]
# mysql   = ["sqlx/mysql"]
# sqlite  = ["sqlx/sqlite"]

[lints]
workspace = true
