#:schema https://www.schemastore.org/cargo.json
[package]
authors.workspace    = true
edition.workspace    = true
license.workspace    = true
name                 = "pennapi-core"
repository.workspace = true
version              = "0.1.0"

[dependencies]
async-trait  = { workspace = true }
chrono       = { workspace = true }
rust_decimal = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
uuid         = { workspace = true }

[lints]
workspace = true
