[package]
edition.workspace = true
name              = "api-db"
publish.workspace = true
version           = "0.1.0"

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:fake", "dep:rand", "dep:regex"]

[dependencies]
anyhow     = "1.0"
api-config = { workspace = true }
fake       = { workspace = true, features = ["derive"], optional = true }
rand       = { version = "0.9", optional = true }
regex      = { workspace = true, optional = true }
serde      = { workspace = true }
sqlx       = { workspace = true }
thiserror  = { workspace = true }
uuid       = { workspace = true }
validator  = { version = "0.20", features = ["derive"] }
