[package]
edition.workspace = true
name              = "api-macros"
publish.workspace = true
version           = "0.0.1"

[lib]
proc-macro = true
# examples in docs don't run without a running database, etc.
doctest = false

[dependencies]
quote = "1.0"
syn   = { version = "2.0", features = ["full"] }
